<resources>
    <string name="app_name">C.R.A.S.D</string>
    <string name="pass_hint">Password</string>
    <string name="email_nint">Email</string>
    <string name="login">login</string>
    <string name="create_Account">Need A New Account</string>
    <string name="loginwelcome">Welcome to C.R.A.M.P</string>
    <string name="action_Accountsetting">Account Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_Logout">Log Out</string>
    <string name="already">Already Have an account</string>
    <string name="create">Create Account</string>
    <string name="confirmpasword">confirm password</string>
    <string name="regrcreatetext">Create New Account</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="addpost">New Post</string>
    <string name="google_maps_key">AIzaSyBukRQ-SgshAWYYjuFcaAUxjqA2UohsaDs</string>

    <string name="username">Username</string>
    <string name="postdate">Post date</string>
    <string name="title">Title</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit,  et dolore magna aliqua. Ut enim ad minim </string>
    <string name="save">Save Account Settings</string>
    <string name="maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
